09 Nov 2001 Fix hang in synchronize_broadcast - Greg Smith
09 Nov 2001 Make MODEL_DEPENDENT more specific with CS and STCM - Paul Leisy
08 Nov 2001 Correct/Remove OPTION_REDUCE_INVAL miss-spelling - Paul Leisy
05 Nov 2001 RP needs to INVALIDATE_AEA() since AR loaded - Paul Leisy
02 Nov 2001 Fix SQXR when iteration results are off by 1 - Paul Leisy
02 Nov 2001 Fix one IPTE bug by adding INVALIDATE_AxA() - Paul Leisy
31 Oct 2001 OPTION_FISHIO only if fthreads and not OPTION_SYNCIO - Fish
31 Oct 2001 'KillAllDeviceThreads' function disabled - Fish
31 Oct 2001 CTC Channel Command retry (contributed by Jim Pierson) - Fish
31 Oct 2001 Fix CFDR so overflow check done after rounding - Paul Leisy
31 Oct 2001 Fix MVCL so unused R1 and R2 bits zeroed - Paul Leisy
31 Oct 2001 Add "loadtext" panel command to load text decks - Paul Leisy
31 Oct 2001 Add "QUIET" ostailor option so all pgmtrace disabled - Paul Leisy
28 Oct 2001 Added WAKEUP_CPU call to stop/stopall commands in panel.c to
            fix "ipl rejected: All CPU's must be stopped" problem - Fish
28 Oct 2001 Various fixes to cardrdr.c - Fish
26 Oct 2001 Fix EX page cross, add INVALIDATA_AIA() - Juergen Dobrinski
25 Oct 2001 updated hercconf.html with new 'sockdev' reader option - Fish
25 Oct 2001 minor extgui tweak to better detect when cpu stopped - Fish
25 Oct 2001 rearranged DEVBLK structure (I hope it's better) - Fish
25 Oct 2001 sockdev no longer requires ascii only; ebcdic now ok - Fish
25 Oct 2001 Fix cardpch bug causing padding to fail on ebcdic o/p - Fish
25 Oct 2001 OPTION_BUFFERED_RDR rescinded/deprecated; using standard 'C'
            fread/getc, etc. instead (Thanks Matt & Willem) - Fish
22 Oct 2001 Fix another SQXR bug - Paul Leisy
17 Oct 2001 Big-endian support and endian conversion - Greg Smith
16 Oct 2001 OPTION_BUFFERED_RDR - Fish
16 Oct 2001 Hot Reader support (sockdev = socket devices) - Fish
            (mostly Malcolm Beattie's inspiration; implemented by me)