@@ -208,6 +208,11 @@ pgmtrace -<em>n</em>  Turn off program interrupt tracing for interrupt code n
 panrate slow &#124 fast &#124 <em>n</em>   Set panel refresh rate to n milliseconds
 </pre>
 
+<p> 
+The <em>ipl</em> command may also be used to perform a load from cdrom or
+server.  For example if a standard SuSE S/390 Linux distribution CD is loaded
+and mounted on /cdrom for example, this cdrom may then be ipl-ed by:
+<em>ipl /cdrom/suse.ins</em>
 <p>
 The <em>attach</em> and <em>detach</em> commands are used to dynamically
 add or remove devices from the configuration,
