@@ -1,3 +1,4 @@
+09 Nov 2001 Add HMC cdrom type IPL support - Jan Jaeger
 09 Nov 2001 Fix hang in synchronize_broadcast - Greg Smith
 09 Nov 2001 Make MODEL_DEPENDENT more specific with CS and STCM - Paul Leisy
 08 Nov 2001 Correct/Remove OPTION_REDUCE_INVAL miss-spelling - Paul Leisy
